# snippets_clang

./: .gitignore  CMakeLists.txt  README.md
c/: Makefile  SymbolScanner.c  clang_visit.c  diagnose.c  test_inclusionVisitor.c  visit_test.c
cmake/: FindLlvm.cmake
libclang/: CMakeLists.txt  Common.cc  Common.hpp
libclang-py/: cc_dumper.py  pyproject.toml
libclang-py/itf/: dumper.py  main.py  util.py
libclang/CodeComplete/: CodeComplete.cc
libclang/cc_lookup/: cc_lookup.cc
libclang/ccomplete/: CMakeLists.txt  main.cc
libclang/ccomplete/samples/: sample2_l6c9.cc
libclang/childvisitor/: Childvisitor.cc
libclang/clang_test_it/: clang_test_it.cc
libclang/clang_visit/: clang_visit.cc
libclang/cursor/: main.cc
libclang/diagnosis/: main.cc
libclang/diagnosis/samples/: sample1.cc  sample2.cc
libclang/inclusion_visitor/: includeVisitor.cc
libclang/libclang_wrapper/: Common.cc  Common.hpp  CursorCounter.cc  CursorInfo.cc  CursorInfo.hpp  main.cc
libclang/match/: main.cc
libclang/match_symbol/: main.cc
libclang/myclang/: main.cc
libclang/visit_test/: visit_test.cc
libclang/voidcaster/: CMakeLists.txt  interact.cc  interact.h  msa.cc  msa.h  shared.h  treemunger.cc  treemunger.h  voidcaster.cc
libclang/wrapper/: CMakeLists.txt  CursorCounter.hpp  CursorInfo.cc  CursorInfo.hpp  main.cc
other/clang-ast/: Makefile  ast.cpp
other/clang-tags/: .gitignore
other/clang-tags/src/: CMakeLists.txt  main.cpp
other/clangwarnglobals/: Makefile  README  WarnGlobals.cpp  test.h
other/cppinfo/: .gitignore  CMakeLists.txt  README.txt
other/cppinfo/docs/: Doxyfile
other/cppinfo/example/: CMakeLists.txt  cpp_analyzer_example.cpp  example_code.cpp
other/cppinfo/libs/: CMakeLists.txt  basic_type_info.h  cpp_analyzer.cpp  cpp_analyzer.h  cpp_info.cpp  cpp_info.h
plugin/: .gitignore  CMakeLists.txt  DBZ.cc  MyCheckers.cc  SimpleMakefile  heartbleed.cc  test.sh
plugin/e2/: demo2.c
plugin/src/: CMakeLists.txt  PrintFunctionNames.cpp  SimpleFuncPlugin.cpp
plugin/test/: CMakeLists.txt  testprintfuncname.c
py/: dump.py  includes.py
py/test_ctypes/: testlib.c  testlibwrapper.py
tablegen/: t1.td  t2.td  t3.td  t4_.td
test/: c_if_and_for.c  comment.cc  cursor.c  funcallsample.cpp  lit.cfg  misc.cc  pass-nullptr.c
test/llvm/: main.c  sum.c
test/llvm/makefile/: Makefile  main.c  min.c
test/llvm/misc/: lex.c  min.c  run.sh  sum.c
test/llvm/rtdylib/: add.c  main.c  sub.c
test/llvm/tblgen/: insns.td
test/plugin/: scan-check.py
test/plugin/DivideByZero/: DivideByZero.c
test/plugin/heartbleed/: t1.c  t2.c
tests/plugin/: cfe-utils.py  scan-check.py
tests/plugin/e1/: Makefile  demo1.c
tests/plugin/e2/: Makefile  demo2.c
tests/plugin/e3/: dbz.c
tooling/: CMakeLists.txt
tooling/ast/: CMakeLists.txt  ast.cc  main.cc
tooling/ast/test/: EnableImplicit.cpp  EnableLoc.cpp
tooling/ast/test/Decl/: AccessSpecDecl.cpp  CXXConstructorDecl.cpp  CXXDestructorDecl.cpp  CXXMethodDecl.cpp  CXXRecordDecl.cpp  ClassTemplatePartialSpecializationDecl.cpp  EnumConstantDecl.cpp  FieldDecl.cpp  FriendDecl.cpp  FunctionDecl.cpp  FunctionTemplateDecl.cpp  LabelDecl.cpp  LinkageSpecDecl.cpp  NamespaceAliasDecl.cpp  NamespaceDecl.cpp  NonTypeTemplateParmDecl.cpp  TemplateTypeParmDecl.cpp  TypeAliasTemplateDecl.cpp  UnresolvedUsingValueDecl.cpp  UsingDecl.cpp  UsingDirectiveDecl.cpp
tooling/ast/test/Expr/: AddLabelExpr.cpp  BinaryOperator.cpp  DeclRefExpr.cpp  MemberExpr.cpp
tooling/ast/test/Stmt/: AttributedStmt.cpp  BreakStmt.cpp  CXXCatchStmt.cpp  CXXTryStmt.cpp  CompoundStmt.cpp  ContinueStmt.cpp  GCCAsmStmt.cpp  GotoStmt.cpp  IndirectGotoStmt.cpp  NullStmt.cpp  ReturnStmt.cpp  SwitchStmt.cpp
tooling/ast/test/Type/: SubstTemplateTypeParmType.cpp
tooling/cfe/: CMakeLists.txt  main.cc
tooling/clang_check/: ClangCheck.cc
tooling/complex/: complex.cc
tooling/decls/: CMakeLists.txt  main.cc
tooling/plugin/: DBZ.cc  MyCheckers.cc
tooling/plugin_DCE/: .gitignore  CMakeLists.txt  DeadMethod.cpp  Makefile  README.md
tooling/plugin_warnGV/: .gitignore  Makefile  WarnGlobals.cpp  test.cpp  test.h
tooling/rewrite1/: rewriter1.cc
tooling/rewrite2/: rewrite2.cc
tooling/rewrite3/: rewrite3.cc
tooling/tablegen/: t1.td  t4.td
tooling/test/plugin/DivideByZero/: DivideByZero.c
tooling/tokens/: main.cc
tooling/tooling/: CMakeLists.txt
tooling/tooling/ast/: ast.cc
tooling/tooling/ast/test/Decl/: CXXConversionDecl.cpp  EnumDecl.cpp  TemplateTemplateParmDecl.cpp  UsingShadowDecl.cpp
tooling/tooling/ast/test/Expr/: ExplicitCastExpr.cpp  OffsetOfExpr.cpp  ParenExpr.cpp
tooling/tooling/ast/test/Stmt/: DeclStmt.cpp
tooling/tooling/cfe/: main.cc
tooling/tooling/rewrite1/: rewriter1.cc
tooling/tooling/toplevel_decls/: toplevel_decls.cc
tooling/tooling/try_matcher/: try_matcher.cc
tooling/tools/: CMakeLists.txt
tooling/tools/ast/: CMakeLists.txt  ast.cc
tooling/tools/ast/test/: FilterString.cpp
tooling/tools/ast/test/Decl/: ClassTemplateDecl.cpp  ClassTemplateSpecializationDecl.cpp  StaticAssertDecl.cpp  UnresolvedUsingTypenameDecl.cpp  VarDecl.cpp
tooling/tools/ast/test/Expr/: AtomicExpr.cpp  ParenListExpr.cpp
tooling/tools/cfe/: CMakeLists.txt  main.cc
tooling/tools/complex/: complex.cc
tooling/tools/rewrite1/: CMakeLists.txt  rewriter1.cc
tooling/tools/rewrite3/: rewrite3.cc
tooling/tools/toplevel_decls/: CMakeLists.txt
tooling/toplevel_decls/: toplevel_decls.cc
tooling/try_matcher/: try_matcher.cc
utils/: setup.py
x/: Makefile  clang-test-it.cpp  func_sig.cpp  interpreter.cpp  loopConvert.cpp  rewritersample.cpp
x/api_eg/: Makefile  build_executable.cpp  compile_to_module-return.cpp  compile_to_module.cpp  getinmemory.c
x/libclang_wrapper/: CMakeLists.txt  Common.cc
x/libclang_wrapper/cmake/: Common.cmake  FindLlvm.cmake  LLVMTools.cmake
x/lloccount/: CursorInfo.cc  Makefile  main.cpp  stats.hpp
